--- a/src/main/webapp/app/entities/historial-de-credito/historial-de-credito-detail.component.html
+++ b/src/main/webapp/app/entities/historial-de-credito/historial-de-credito-detail.component.html
@@ -5,30 +5,26 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="creditoApp.historialDeCredito.startDate">Start Date</span></dt>
+                <dt><span jhiTranslate="creditoApp.historialDeCredito.fecha">Fecha</span></dt>
                 <dd>
-                    <span>{{historialDeCredito.startDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="creditoApp.historialDeCredito.endDate">End Date</span></dt>
-                <dd>
-                    <span>{{historialDeCredito.endDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="creditoApp.historialDeCredito.factura">Factura</span></dt>
-                <dd>
-                    <div *ngIf="historialDeCredito.factura">
-                        <a [routerLink]="['/factura', historialDeCredito.factura?.id, 'view']">{{historialDeCredito.factura?.id}}</a>
-                    </div>
+                    <span>{{historialDeCredito.fecha}}</span>
                 </dd>
                 <dt><span jhiTranslate="creditoApp.historialDeCredito.cliente">Cliente</span></dt>
                 <dd>
-                    <div *ngIf="historialDeCredito.cliente">
-                        <a [routerLink]="['/cliente', historialDeCredito.cliente?.id, 'view']">{{historialDeCredito.cliente?.id}}</a>
+                    <div *ngIf="historialDeCredito.clienteId">
+                        <a [routerLink]="['/cliente', historialDeCredito.clienteId, 'view']">{{historialDeCredito.clienteId}}</a>
+                    </div>
+                </dd>
+                <dt><span jhiTranslate="creditoApp.historialDeCredito.factura">Factura</span></dt>
+                <dd>
+                    <div *ngIf="historialDeCredito.facturaId">
+                        <a [routerLink]="['/factura', historialDeCredito.facturaId, 'view']">{{historialDeCredito.facturaId}}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="creditoApp.historialDeCredito.abono">Abono</span></dt>
                 <dd>
-                    <div *ngIf="historialDeCredito.abono">
-                        <a [routerLink]="['/abono', historialDeCredito.abono?.id, 'view']">{{historialDeCredito.abono?.id}}</a>
+                    <div *ngIf="historialDeCredito.abonoId">
+                        <a [routerLink]="['/abono', historialDeCredito.abonoId, 'view']">{{historialDeCredito.abonoId}}</a>
                     </div>
                 </dd>
             </dl>
