--- a/src/main/webapp/app/entities/historial-de-credito/historial-de-credito-update.component.html
+++ b/src/main/webapp/app/entities/historial-de-credito/historial-de-credito-update.component.html
@@ -10,39 +10,41 @@
                         [(ngModel)]="historialDeCredito.id" readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.startDate" for="field_startDate">Start Date</label>
-                    <div class="d-flex">
-                        <input id="field_startDate" type="datetime-local" class="form-control" name="startDate" [(ngModel)]="startDate"
-                        />
+                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.fecha" for="field_fecha">Fecha</label>
+                    <div class="input-group">
+                        <input id="field_fecha" type="text" class="form-control" name="fecha" ngbDatepicker  #fechaDp="ngbDatepicker" [(ngModel)]="historialDeCredito.fecha"
+                        required/>
+                        <span class="input-group-append">
+                            <button type="button" class="btn btn-secondary" (click)="fechaDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
+                        </span>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.endDate" for="field_endDate">End Date</label>
-                    <div class="d-flex">
-                        <input id="field_endDate" type="datetime-local" class="form-control" name="endDate" [(ngModel)]="endDate"
-                        />
+                    <div [hidden]="!(editForm.controls.fecha?.dirty && editForm.controls.fecha?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.fecha?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                        </small>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.factura" for="field_factura">Factura</label>
-                    <select class="form-control" id="field_factura" name="factura" [(ngModel)]="historialDeCredito.factura">
+                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.cliente" for="field_cliente">Cliente</label>
+                    <select class="form-control" id="field_cliente" name="cliente" [(ngModel)]="historialDeCredito.clienteId">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="facturaOption.id === historialDeCredito.factura?.id ? historialDeCredito.factura : facturaOption" *ngFor="let facturaOption of facturas; trackBy: trackFacturaById">{{facturaOption.id}}</option>
+                        <option [ngValue]="clienteOption.id" *ngFor="let clienteOption of clientes; trackBy: trackClienteById">{{clienteOption.id}}</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.cliente" for="field_cliente">Cliente</label>
-                    <select class="form-control" id="field_cliente" name="cliente" [(ngModel)]="historialDeCredito.cliente">
+                    <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.factura" for="field_factura">Factura</label>
+                    <select class="form-control" id="field_factura" name="factura" [(ngModel)]="historialDeCredito.facturaId">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="clienteOption.id === historialDeCredito.cliente?.id ? historialDeCredito.cliente : clienteOption" *ngFor="let clienteOption of clientes; trackBy: trackClienteById">{{clienteOption.id}}</option>
+                        <option [ngValue]="facturaOption.id" *ngFor="let facturaOption of facturas; trackBy: trackFacturaById">{{facturaOption.id}}</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="creditoApp.historialDeCredito.abono" for="field_abono">Abono</label>
-                    <select class="form-control" id="field_abono" name="abono" [(ngModel)]="historialDeCredito.abono">
+                    <select class="form-control" id="field_abono" name="abono" [(ngModel)]="historialDeCredito.abonoId">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="abonoOption.id === historialDeCredito.abono?.id ? historialDeCredito.abono : abonoOption" *ngFor="let abonoOption of abonos; trackBy: trackAbonoById">{{abonoOption.id}}</option>
+                        <option [ngValue]="abonoOption.id" *ngFor="let abonoOption of abonos; trackBy: trackAbonoById">{{abonoOption.id}}</option>
                     </select>
                 </div>
             </div>
